...
                        }, label: {
                            Label("absenceEntry", systemImage: "calendar")
                        })
                    }
                    label: {
                        Image(systemName: "plus")
                            .accessibility(identifier: "ToolbarAddEntry.add")
                    }
                }
            })
            .sheet(item: self.$activeSheet) { activeSheet in
                switch activeSheet {
                case .addTimeEntry:
...
