...
        NavigationView {
            VStack {
                if props.timeEntries.isEmpty {
                    Text("noEntriesYet")
                        .padding(.all, 50)
                        .multilineTextAlignment(.center)
                        .accessibility(identifier: "List.noEntriesYet")
                    Spacer()
                } else {
                    List {
                        ForEach(props.relevantDays.sorted(by: { $0.key > $1.key }), id: \.key) { year, weeks in
                            YearView(year: year,
                                     relevantDays: weeks,
...
