...
                    Spacer()

                    Button(props.timeEntries.isTimerRunning ? "stop" : "start") {
                        props.toggleTimer()
                    }
                    .buttonStyle(CTAStyle())
                    .accessibility(identifier: "Timer.timer")

                    Spacer()
                }
                .navigationBarTitle(self.mode.title)
            }
        }
...
